--- a/exercicios/Aula1_Exercicio.ipynb
+++ b/exercicios/Aula1_Exercicio.ipynb
@@ -203,33 +203,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.4 Escreva uma função Python para gerar um dicionário que contenha pares (chave e valor) de números. A chave deve variar de 1 a n, e os valores sejam o valor da chave elevado ao quadrado. \n",
-    "#### Exemplo:  Para n = 5\n",
-    "#### Resultado Esperado: {1: 1, 2: 4, 3: 9, 4: 16, 5: 25}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "nbgrader": {
-     "grade": false,
-     "grade_id": "cell-bb9537795a06bd7e",
-     "locked": false,
-     "schema_version": 3,
-     "solution": true,
-     "task": false
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Dica: use a função range para criar a sequencia de numeros desejados\n",
-    "def create_dict(n):\n",
-    "    \"\"\"retorne um dicionário com pares (x, x*x)\n",
-    "    \"\"\"\n",
-    "    ### BEGIN SOLUTION\n",
-    "    \n",
-    "    ### END SOLUTION"
+    "### 1.4 Crie um código python para imprimir o seguinte padrão. \n",
+    "#### 1 \n",
+    "#### 1 2 \n",
+    "#### 1 2 3 \n",
+    "#### 1 2 3 4 \n",
+    "#### 1 2 3 4 5"
    ]
   },
   {
@@ -238,7 +217,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Faça seus testes aqui\n"
+    "## Faça aqui\n"
    ]
   },
   {
@@ -257,17 +236,16 @@
    },
    "outputs": [],
    "source": [
-    "# Validação\n",
-    "assert create_dict(5) == {1: 1, 2: 4, 3: 9, 4: 16, 5: 25}"
+    "### Este exercicio não tem assert\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.5 Escreva uma função Python para remover itens duplicados de um dicionário, ou seja, cujos valores estejam duplicados.\n",
-    "#### Exemplo:  d =  {1: 1, 2: 1, 3: 9, 4: 1, 5: 25}\n",
-    "#### Resultado Esperado: {1: 1, 3: 9, 5: 25}"
+    "### 1.5 Escreva uma função Python para percorrer uma lista e retornar os números multiplos de N. Pare a iteração no ponto em que encontrar um número maior do que K. Não retorne o 1o número maior do que N.\n",
+    "#### Exemplo:  lista = [120, 115, 12, 32, 56, 200, 715, 152, 130, 155, 183, 300], N=5, K=200\n",
+    "#### Resultado Esperado: [120, 115, 12, 32, 56]"
    ]
   },
   {
@@ -285,8 +263,9 @@
    },
    "outputs": [],
    "source": [
-    "def remove_duplicates(data):\n",
-    "    \"\"\"retorne um dicionário sem duplicatas\n",
+    "def filtra_lista(lista, N, K):\n",
+    "    \"\"\"retorne uma lista com todos os números multiplos de N menores do que K, \n",
+    "       até o primeiro número maior do que K, não inclua este número na lista de resultado.\n",
     "    \"\"\"\n",
     "    ### BEGIN SOLUTION\n",
     "    \n",
@@ -314,30 +293,21 @@
      "schema_version": 3,
      "solution": false,
      "task": false
-    }
+    },
+    "scrolled": true
    },
    "outputs": [],
    "source": [
     "# Validação\n",
-    "assert remove_duplicates({1: 1, 2: 1, 3: 9, 4: 1, 5: 25}) ==  {1: 1, 3: 9, 5: 25}\n",
-    "data = {'id1': {'nome': ['Sara'], 'classe': ['A'], 'disciplina': ['portugues, historia, ciencia']},\n",
-    "        'id2': {'nome': ['Joao'], 'classe': ['A'], 'disciplina': ['portugues, historia, ciencia']},\n",
-    "        'id3': {'nome': ['Sara'], 'classe': ['A'], 'disciplina': ['portugues, historia, ciencia']},\n",
-    "        'id4': {'nome': ['Maria'], 'classe': ['A'], 'disciplina': ['portugues, historia, ciencia']}\n",
-    "}\n",
-    "no_duplicates = {'id1': {'nome': ['Sara'], 'classe': ['A'], 'disciplina': ['portugues, historia, ciencia']}, \n",
-    "                 'id2': {'nome': ['Joao'], 'classe': ['A'], 'disciplina': ['portugues, historia, ciencia']}, \n",
-    "                 'id4': {'nome': ['Maria'], 'classe': ['A'], 'disciplina': ['portugues, historia, ciencia']}}\n",
-    "assert remove_duplicates(data) == no_duplicates"
+    "assert filtra_lista([120, 115, 12, 32, 56, 200, 715, 152, 130, 155, 183, 300], 5, 200) == [120, 115, 12, 32, 56, 200]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.6 Escreva uma função Python para combinar os itens de mesma chave de uma lista de  dicionários, somando os valores correspondentes.\n",
-    "##### Exemplo:  para [{'item': 'carro', 'quantidade': 400}, {'item': 'moto', 'quantidade': 300}, {'item': 'carro', 'quantidade': 750}]\n",
-    "##### Resultado esperado: {'carro': 1150, 'moto': 300}"
+    "### 1.6 Dado um número inteiro qualquer, escreva uma função python para retornar a quantidade de caracteres (dígitos) contida neste número.\n",
+    "##### Exemplo:  qtd_digitos(2345653) deve retornar 7"
    ]
   },
   {
@@ -355,8 +325,8 @@
    },
    "outputs": [],
    "source": [
-    "def combine_items(item_list):\n",
-    "    \"\"\"retorne um dicionário combinando (somando) as quantidades do mesmo item\n",
+    "def qtd_digitos(N):\n",
+    "    \"\"\"retorne a quantidade de dígitos do número N.\n",
     "    \"\"\"\n",
     "    ### BEGIN SOLUTION\n",
     "\n",
@@ -389,11 +359,7 @@
    "outputs": [],
    "source": [
     "# Validação\n",
-    "input_data = [{'item': 'carro', 'quantidade': 400}, \n",
-    "              {'item': 'moto', 'quantidade': 300}, \n",
-    "              {'item': 'carro', 'quantidade': 750}]\n",
-    "output_result = {'carro': 1150, 'moto': 300}\n",
-    "assert combine_items(input_data) == output_result"
+    "assert qtd_digitos(2345653) == 7"
    ]
   },
   {
@@ -463,32 +429,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.8 Usando um defaultdict, escreva uma função Python para transformar uma lista de listas num dicionário. Os valores repetidos de uma lista devem ser associados a mesma chave do dicionário, como no exemplo abaixo.\n",
-    "#### Exemplo:  [ [\"carro\", 10], [\"moto\", 20], [\"trem\", 5], [\"carro\", 30], [\"caminhao\", 20] ]\n",
-    "#### Resultado esperado: {\"carro\": [10, 20], \"moto\": [20], \"trem\": [5], \"caminhao\": [20] }"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "nbgrader": {
-     "grade": false,
-     "grade_id": "cell-f7b05dc12adbf2e2",
-     "locked": false,
-     "schema_version": 3,
-     "solution": true,
-     "task": false
-    }
-   },
-   "outputs": [],
-   "source": [
-    "def dict_from_list(lista):\n",
-    "    \"\"\"retorne o valor maximo dentre os resultados da soma por linha de um array 2D \n",
-    "    \"\"\"\n",
-    "    ### BEGIN SOLUTION\n",
-    "\n",
-    "    ### END SOLUTION"
+    "### 1.8 Crie um código python para imprimir o seguinte padrão. \n",
+    "#### 5 4 3 2 1 \n",
+    "#### 4 3 2 1 \n",
+    "#### 3 2 1 \n",
+    "#### 2 1 \n",
+    "#### 1"
    ]
   },
   {
@@ -497,41 +443,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Faça seus testes aqui\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "nbgrader": {
-     "grade": true,
-     "grade_id": "cell-af1b0435b6aacc9b",
-     "locked": true,
-     "points": 1,
-     "schema_version": 3,
-     "solution": false,
-     "task": false
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Validação\n",
-    "lista2 = [ [\"carro\", 10], [\"moto\", 20], [\"trem\", 5], [\"carro\", 30], [\"caminhao\", 20] ]\n",
-    "assert dict_from_list(lista2) == {'carro': [10, 30], 'moto': [20], 'trem': [5], 'caminhao': [20]}"
+    "### Este exercicio não tem assert\n",
+    "## Faça aqui\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.9 Escreva uma função Python para computar o valor total de uma compra de supermercado e dar baixa no estoque (deduzir a quantidade comprada da quantidade em estoque). Retorne o valor total da compra e altere o dicionário de estoque sem retorná-lo.\n",
-    "#### Se a quantidade do item em estoque for menor do que a quantidade da lista de compra, o estoque restante deve ser vendido.\n",
-    "\n",
-    "#### Exemplo:  lista_compras = {\"arroz\":1, \"feijao\":2, \"macarrao\":3}\n",
-    "####                   estoque = {\"arroz\": 60, \"feijao\": 30, \"macarrao\": 0, \"farinha\": 15}\n",
-    "####                   precos = {\"arroz\": 4, \"feijao\": 2, \"macarrao\": 1.5, \"farinha\": 3}\n",
-    "#### Resultado esperado: total = 6"
+    "### 1.9 Crie uma função python para inverter uma lista usando um loop do tipo for.\n",
+    "#### Exemplo:  inverter([120, 115, 12, 32, 56]) deve retornar [56, 32, 12, 115, 120]"
    ]
   },
   {
@@ -550,8 +471,8 @@
    "outputs": [],
    "source": [
     "# Dica: A função ones do pacote numpy cria um array de 1s\n",
-    "def compra(estoque, precos, lista):\n",
-    "    \"\"\"retorne um array 2d preenchido com 1s nas bordas e 0s no interior \n",
+    "def inverter(lista):\n",
+    "    \"\"\"retorne uma versão invertida da lista passada como argumento\n",
     "    \"\"\"\n",
     "    ### BEGIN SOLUTION\n",
     "\n",
@@ -564,30 +485,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Faça seus testes aqui\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "nbgrader": {
-     "grade": true,
-     "grade_id": "cell-73baa7b9cc0314dc",
-     "locked": true,
-     "points": 1,
-     "schema_version": 3,
-     "solution": false,
-     "task": false
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Validação\n",
-    "lista_compras = {\"arroz\":1, \"feijao\":2, \"macarrao\":3}\n",
-    "estoque = {\"arroz\": 60, \"feijao\": 30, \"macarrao\": 1, \"farinha\": 15}\n",
-    "precos = {\"arroz\": 4, \"feijao\": 2, \"macarrao\": 1.5, \"farinha\": 3}\n",
-    "compra(estoque, precos, lista_compras) == 9.5"
+    "### Este exercicio não tem assert\n",
+    "## Faça aqui\n"
    ]
   },
   {
