--- a/exercicios/Aula1_Exercicio_Extra.ipynb
+++ b/exercicios/Aula1_Exercicio_Extra.ipynb
@@ -78,9 +78,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.12 Escreva uma função que receba uma lista de inteiros como parâmetro e retorne um dicionário com as chaves sendo os elementos da lista, e os valores sendo os elementos da mesma lista, mas na ordem inversa.\n",
-    "#### Exemplo: para a lista [1, 2, 3, 4, 5]\n",
-    "#### Resultado esperado: {1: 5, 2: 4, 3: 3, 4: 2, 5: 1}"
+    "### 1.12 Escreva uma função em python para imprimir o padrão a seguir. A função deve aceitar como argumento o tam\n",
+    "#### * \n",
+    "#### * * \n",
+    "#### * * * \n",
+    "#### * * * * \n",
+    "#### * * * * * \n",
+    "#### * * * * \n",
+    "#### * * * \n",
+    "#### * * \n",
+    "#### *\n"
    ]
   },
   {
@@ -305,7 +312,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.3"
   },
   "name": "_merged"
  },
