--- a/exercicios/Aula1_Exercicio_Extra.ipynb
+++ b/exercicios/Aula1_Exercicio_Extra.ipynb
@@ -78,7 +78,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.12 Escreva uma função em python para imprimir o padrão a seguir. A função deve aceitar como argumento o tam\n",
+    "### 1.12 Escreva uma função em python para imprimir o padrão a seguir. A função deve aceitar como argumento o tamanho da maior string de asteriscos.\n",
     "#### * \n",
     "#### * * \n",
     "#### * * * \n",
