--- a/exercicios/Aula1_Exercicio.ipynb
+++ b/exercicios/Aula1_Exercicio.ipynb
@@ -245,7 +245,7 @@
    "source": [
     "### 1.5 Escreva uma função Python para percorrer uma lista e retornar os números multiplos de N. Pare a iteração no ponto em que encontrar um número maior do que K. Não retorne o 1o número maior do que N.\n",
     "#### Exemplo:  lista = [120, 115, 12, 32, 56, 200, 715, 152, 130, 155, 183, 300], N=5, K=200\n",
-    "#### Resultado Esperado: [120, 115, 12, 32, 56]"
+    "#### Resultado Esperado: [120, 115, 200]"
    ]
   },
   {
@@ -299,7 +299,7 @@
    "outputs": [],
    "source": [
     "# Validação\n",
-    "assert filtra_lista([120, 115, 12, 32, 56, 200, 715, 152, 130, 155, 183, 300], 5, 200) == [120, 115, 12, 32, 56, 200]"
+    "assert filtra_lista([120, 115, 12, 32, 56, 200, 715, 152, 130, 155, 183, 300], 5, 200) == [120, 115, 200]"
    ]
   },
   {
