--- a/exercicios/Aula1_Exercicio.ipynb
+++ b/exercicios/Aula1_Exercicio.ipynb
@@ -329,7 +329,7 @@
     "    \"\"\"retorne a quantidade de dígitos do número N.\n",
     "    \"\"\"\n",
     "    ### BEGIN SOLUTION\n",
-    "\n",
+    "    return\n",
     "    ### END SOLUTION"
    ]
   },
