--- a/exercicios/Aula1_Exercicio_Extra.ipynb
+++ b/exercicios/Aula1_Exercicio_Extra.ipynb
@@ -93,55 +93,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "nbgrader": {
-     "grade": false,
-     "grade_id": "cell-2e044a5f0541da37",
-     "locked": false,
-     "schema_version": 3,
-     "solution": true,
-     "task": false
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Dica: use a função zip. Ela retorna itens agrupados dois a dois.\n",
-    "def create_dict(lista):\n",
-    "    \"\"\"retorne o maior item da lista\n",
-    "    \"\"\"\n",
-    "    ### BEGIN SOLUTION\n",
-    "\n",
-    "    ### END SOLUTION"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Faça seus testes aqui\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "nbgrader": {
-     "grade": true,
-     "grade_id": "cell-5bd4079b37b6a7f3",
-     "locked": true,
-     "points": 1,
-     "schema_version": 3,
-     "solution": false,
-     "task": false
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Validação\n",
-    "assert create_dict([1, 2, 3, 4, 5]) == {1: 5, 2: 4, 3: 3, 4: 2, 5: 1}\n",
-    "assert create_dict([-100,-1580,-1,-9100,-77]) == {-100: -77, -1580: -9100, -1: -1, -9100: -1580, -77: -100}"
+    "### Este exercício não tem assert\n",
+    "## Faça aqui\n"
    ]
   },
   {
