--- a/notebook/Aula1/Aula1_Warmup.ipynb
+++ b/notebook/Aula1/Aula1_Warmup.ipynb
@@ -104,13 +104,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "e\n"
+     ]
+    }
+   ],
    "source": [
     "# Considere a lista a a seguir:\n",
     "lista_str = [\"234sewerawe\", \"abasdreera\", \"rtydeaera\", \"agwdeaer\", \"nsedert\", \n",
-    "         \"ab23ea\", \"qycde\", \"ajyd\", \"akm\", \"wb\", \"r\"]"
+    "         \"ab23ea\", \"qycde\", \"ajyd\", \"akm\", \"wb\", \"r\"]\n",
+    "a = \"a12445\"\n",
+    "print(lista_str[0][-1])"
    ]
   },
   {
@@ -126,7 +136,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Faça aqui\n"
+    "# Faça aqui\n",
+    "n = 0\n",
+    "while n < len(lista_str):\n",
+    "    #     Lista N\n",
+    "    # \n",
+    "    n = n+1\n"
    ]
   },
   {
@@ -152,7 +167,7 @@
    "metadata": {},
    "source": [
     "#### W1.5 Usando um laço do tipo while, percorra a lista_str acima excluindo os elementos da lista que não terminam com vogal\n",
-    "#### Dica: teste se um caracter é uma vogal assim: charac in [\"a\", \"b\", \"c\", \"d\", \"e\"]\n",
+    "#### Dica: teste se um caracter é uma vogal assim: charac in [\"a\", \"e\", \"i\", \"o\", \"u\"]\n",
     "\n"
    ]
   },
