--- a/exercicios/Aula1_Exercicio_Solucoes.ipynb
+++ b/exercicios/Aula1_Exercicio_Solucoes.ipynb
@@ -12,14 +12,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.1 Escreva uma função em Python que aceite um inteiro (n) de 1 a 9 e compute o valor de: n+nn+nnn\n",
+    "### 1.1 Escreva uma função em Python que aceite um inteiro (n) de 1 a 9 e computa o valor de: n+nn+nnn\n",
     "#### Valide os valores de entrada. Para isso, use a instrução raise ValueError\n",
     "##### Exemplo: n=5. Então n + nn + nnn = 5 + 55 + 555 = 615"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -36,22 +36,36 @@
     "    \"\"\"retorne o valor de: n+nn+nnn\n",
     "    \"\"\"\n",
     "    ### BEGIN SOLUTION\n",
-    "    \n",
+    "    if n<1 or n>9:\n",
+    "        raise ValueError\n",
+    "    return n + int('{0}{0}'.format(n,n)) + int('{0}{0}{0}'.format(n,n,n))\n",
     "    ### END SOLUTION"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1107"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "## Faça seus testes aqui\n"
+    "## Faça seus testes aqui\n",
+    "calculo_n(9)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {
     "nbgrader": {
      "grade": true,
@@ -81,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -98,13 +112,18 @@
     "    \"\"\"retorne o maior item da lista\n",
     "    \"\"\"\n",
     "    ### BEGIN SOLUTION\n",
+    "    result = lista[0]\n",
+    "    for n in lista[1:]:\n",
+    "        if result < n:\n",
+    "            result = n\n",
     "    \n",
+    "    return result\n",
     "    ### END SOLUTION"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {
     "nbgrader": {
      "grade": true,
@@ -136,7 +155,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.3 Escreva uma função para contar a quantidade de strings, presentes numa lista, cujo tamanho é maior que 2 e o primeiro e último caracteres são os mesmos\n",
+    "### 1.3 Escreva uma função contar a quantidade de strings, presentes numa lista, cujo tamanho é maior que 2 e o primeiro e último caracteres são os mesmos\n",
     "\n",
     "#### Exemplo:  ['abc', 'xyz', 'aba', '1221']\n",
     "#### Resultado esperado : 2\n"
@@ -144,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -163,22 +182,39 @@
     "    \"\"\"retorne o maior item da lista\n",
     "    \"\"\"\n",
     "    ### BEGIN SOLUTION\n",
-    "\n",
+    "    qtd = 0\n",
+    "    for l in lista:\n",
+    "        if len(l) > 2 and l[0]==l[-1]:\n",
+    "            qtd = qtd + 1\n",
+    "    \n",
+    "    return qtd\n",
     "    ### END SOLUTION"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "## Faça seus testes aqui\n"
+    "## Faça seus testes aqui\n",
+    "contagem(['abc', 'xyz', 'aba', '1221'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {
     "nbgrader": {
      "grade": true,
@@ -213,30 +249,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Faça aqui\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {
     "nbgrader": {
-     "grade": true,
-     "grade_id": "cell-61d03fd9d1b0eb4e",
-     "locked": true,
-     "points": 1,
+     "grade": false,
+     "grade_id": "cell-bb9537795a06bd7e",
+     "locked": false,
      "schema_version": 3,
-     "solution": false,
+     "solution": true,
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Solucao 1\n",
+      "1 \n",
+      "1 2 \n",
+      "1 2 3 \n",
+      "1 2 3 4 \n",
+      "1 2 3 4 5 \n",
+      "\n",
+      "Solucao 2\n",
+      "1\n",
+      "1 2\n",
+      "1 2 3\n",
+      "1 2 3 4\n",
+      "1 2 3 4 5\n"
+     ]
+    }
+   ],
    "source": [
-    "### Este exercicio não tem assert\n"
+    "### Este exercicio não tem assert\n",
+    "## Faça aqui\n",
+    "#Solucao 1\n",
+    "print(\"Solucao 1\")\n",
+    "n=5\n",
+    "for i in range(1,n+1):\n",
+    "    tmp = \"\"\n",
+    "    for j in range(1,i+1):\n",
+    "        tmp = tmp + str(j) + \" \" \n",
+    "    print(tmp)\n",
+    "\n",
+    "# Solução 2\n",
+    "print(\"\\nSolucao 2\")\n",
+    "n=5\n",
+    "for i in range(1,n+1):\n",
+    "    lista = [str(j) for j in range(1,i+1)] # Esta sintaxe será ensinada na aula 2\n",
+    "    print(\" \".join(lista))"
    ]
   },
   {
@@ -250,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -268,22 +330,29 @@
     "       até o primeiro número maior do que K, não inclua este número na lista de resultado.\n",
     "    \"\"\"\n",
     "    ### BEGIN SOLUTION\n",
-    "    \n",
+    "    result = []\n",
+    "    for e in lista:\n",
+    "        if e > K:\n",
+    "            break\n",
+    "        if e % N == 0:\n",
+    "            result.append(e)\n",
+    "    return result\n",
     "    ### END SOLUTION"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Faça seus testes aqui\n"
+    "## Faça seus testes aqui\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {
     "nbgrader": {
      "grade": true,
@@ -293,8 +362,7 @@
      "schema_version": 3,
      "solution": false,
      "task": false
-    },
-    "scrolled": true
+    }
    },
    "outputs": [],
    "source": [
@@ -312,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -329,13 +397,13 @@
     "    \"\"\"retorne a quantidade de dígitos do número N.\n",
     "    \"\"\"\n",
     "    ### BEGIN SOLUTION\n",
-    "    \n",
+    "    return len(str(N))\n",
     "    ### END SOLUTION"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {
     "nbgrader": {
      "grade": true,
@@ -373,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -390,22 +458,37 @@
     "    \"\"\"retorne a soma dos numeros presentes na variavel texto\n",
     "    \"\"\"\n",
     "    ### BEGIN SOLUTION\n",
-    " \n",
+    "    numeros_str = texto.split(',')\n",
+    "    numeros_int = [float(i) for i in numeros_str]\n",
+    "    return sum(numeros_int)\n",
     "    ### END SOLUTION"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30.0"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "## Faça seus testes aqui\n"
+    "## Faça seus testes aqui\n",
+    "var = \"16.0,  4.0,  10.0\"\n",
+    "soma_string(var)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {
     "nbgrader": {
      "grade": true,
@@ -418,7 +501,18 @@
     },
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Validação\n",
     "var = \"1.0,  4.0,  10.0,  8.0,  4.0,  20.0,  23.0\"\n",
@@ -439,12 +533,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 61,
+   "metadata": {
+    "nbgrader": {
+     "grade": true,
+     "grade_id": "cell-af1b0435b6aacc9b",
+     "locked": true,
+     "points": 1,
+     "schema_version": 3,
+     "solution": false,
+     "task": false
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Solucao 1\n",
+      "5 4 3 2 1 \n",
+      "4 3 2 1 \n",
+      "3 2 1 \n",
+      "2 1 \n",
+      "1 \n",
+      "\n",
+      "Solucao 2\n",
+      "5 4 3 2 1 \n",
+      "4 3 2 1 \n",
+      "3 2 1 \n",
+      "2 1 \n",
+      "1 \n"
+     ]
+    }
+   ],
    "source": [
     "### Este exercicio não tem assert\n",
-    "## Faça aqui\n"
+    "## Faça aqui\n",
+    "n=5\n",
+    "#Solucao 1\n",
+    "print(\"Solucao 1\")\n",
+    "for i in range(n, 0,-1):\n",
+    "    tmp = \"\"\n",
+    "    for j in range(i, 0, -1):\n",
+    "        tmp = tmp + str(j) + \" \" \n",
+    "    print(tmp)\n",
+    "\n",
+    "#Solucao 2\n",
+    "print(\"\\nSolucao 2\")\n",
+    "for i in reversed(range(1,n+1)):\n",
+    "    tmp = \"\"\n",
+    "    for j in reversed(range(1,i+1)):\n",
+    "        tmp = tmp + str(j) + \" \" \n",
+    "    print(tmp)"
    ]
   },
   {
@@ -457,35 +597,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "nbgrader": {
-     "grade": false,
-     "grade_id": "cell-513f2b547866e072",
-     "locked": false,
-     "schema_version": 3,
-     "solution": true,
-     "task": false
-    }
-   },
+   "execution_count": 62,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def inverter(lista):\n",
     "    \"\"\"retorne uma versão invertida da lista passada como argumento\n",
     "    \"\"\"\n",
     "    ### BEGIN SOLUTION\n",
-    "\n",
+    "    result = []\n",
+    "    for i in reversed(range(0,len(lista))):\n",
+    "        result.append(lista[i])\n",
+    "    return result\n",
     "    ### END SOLUTION"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 63,
+   "metadata": {
+    "nbgrader": {
+     "grade": true,
+     "grade_id": "cell-73baa7b9cc0314dc",
+     "locked": true,
+     "points": 1,
+     "schema_version": 3,
+     "solution": false,
+     "task": false
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[56, 32, 12, 115, 120]"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### Este exercicio não tem assert\n",
-    "## Faça aqui\n"
+    "### Este exercicio não tem asserta\n",
+    "## Faça aqui\n",
+    "inverter([120, 115, 12, 32, 56])"
    ]
   },
   {
@@ -499,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -516,22 +672,35 @@
     "    \"\"\"retorne uma lista de numeros do tipo float\n",
     "    \"\"\"\n",
     "    ### BEGIN SOLUTION\n",
-    "\n",
+    "    num_str = texto.replace(',', '.').split(' ')\n",
+    "    return [float(i) for i in num_str]\n",
     "    ### END SOLUTION"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.2, 0.4, 0.56, 0.99]"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "## Faça seus testes aqui\n"
+    "## Faça seus testes aqui\n",
+    "convert_to_float(\"0,20 0,40 0,56 0,99\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {
     "nbgrader": {
      "grade": true,
@@ -549,6 +718,13 @@
     "text = \"0,20 0,40 0,56 0,99\"\n",
     "assert convert_to_float(text) == [0.2, 0.4, 0.56, 0.99]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
