--- a/exercicios/Aula1_Exercicio_Extra_Solucoes.ipynb
+++ b/exercicios/Aula1_Exercicio_Extra_Solucoes.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Aula 1 - Exercícios Extras - Sintaxe de Python e NumPy Array\n",
+    "# Aula 1 - Exercícios Extra - Sintaxe de Python e NumPy Array\n",
     "### Consulta a internet (Google, Stackoverflow e etc) liberada!!"
    ]
   },
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -32,29 +32,30 @@
    },
    "outputs": [],
    "source": [
-    "# Dica 1: aninhe na mesma instrução o loop (for) e a condição (if)\n",
+    "# Dica 1: aninhe na mesma instrução o loope (for) e a condição (if)\n",
     "# Dica 2: se ao final sua lista contiver repetições, transforme a lista num conjunto com o\n",
     "# construtor de conjuntos set(), pois os sets não contêm repetições.\n",
     "def intersecao(a, b):\n",
     "    \"\"\"retorne os valor presentes nas duas listas\n",
     "    \"\"\"\n",
     "    ### BEGIN SOLUTION\n",
-    "\n",
+    "    return list({i for i in a if i in b})\n",
     "    ### END SOLUTION"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Faça seus testes aqui\n"
+    "## Faça seus testes aqui\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "nbgrader": {
      "grade": true,
@@ -87,17 +88,48 @@
     "#### * * * * \n",
     "#### * * * \n",
     "#### * * \n",
-    "#### *\n"
+    "#### *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 12,
+   "metadata": {
+    "nbgrader": {
+     "grade": false,
+     "grade_id": "cell-2e044a5f0541da37",
+     "locked": false,
+     "schema_version": 3,
+     "solution": true,
+     "task": false
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*\n",
+      "**\n",
+      "***\n",
+      "****\n",
+      "*****\n",
+      "****\n",
+      "***\n",
+      "**\n",
+      "*\n"
+     ]
+    }
+   ],
    "source": [
     "### Este exercício não tem assert\n",
-    "## Faça aqui\n"
+    "## Faça aqui\n",
+    "n=5\n",
+    "for i in range(1,n+1):\n",
+    "    print(\"*\"*i)\n",
+    "\n",
+    "for i in reversed(range(1,n)):\n",
+    "    print(\"*\"*i)"
    ]
   },
   {
@@ -120,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -147,22 +179,29 @@
     "         conforme apresentado na descrição do exercício.\n",
     "    \"\"\"\n",
     "    ### BEGIN SOLUTION\n",
-    "\n",
+    "    estados = {}\n",
+    "    for l in lista_texto.split(\";\"):\n",
+    "        ep = l.split(\"=\")\n",
+    "        estados[ep[0]] = int(ep[1])\n",
+    "    pop = list(estados.values())\n",
+    "    pop.sort(reverse=True)\n",
+    "    return pop[0:3]\n",
     "    ### END SOLUTION"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Faça seus testes aqui\n"
+    "## Faça seus testes aqui\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "nbgrader": {
      "grade": true,
@@ -200,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -218,22 +257,25 @@
     "    \"\"\"retorne uma string ordenada de palavras separadas por vírgula\n",
     "    \"\"\"\n",
     "    ### BEGIN SOLUTION\n",
-    " \n",
+    "    lw = words.split(',')\n",
+    "    lw.sort()\n",
+    "    return \",\".join(lw)\n",
     "    ### END SOLUTION"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Faça seus testes aqui\n"
+    "## Faça seus testes aqui\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "nbgrader": {
      "grade": true,
@@ -248,7 +290,7 @@
    "outputs": [],
    "source": [
     "# Validação\n",
-    "assert sort_words(\"hoje,nota,teste,bolsa\") == \"bolsa,hoje,nota,teste\""
+    "assert sort_words(\"hoje,nota,teste,bolsa\") == \"bolsa,hoje,nota,teste\"\n"
    ]
   }
  ],
