--- a/exercicios/Aula1_Exercicio.ipynb
+++ b/exercicios/Aula1_Exercicio.ipynb
@@ -439,10 +439,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Dica: Use a função reversed() para inverter uma lista/iterator. Ou use uma sintaxe \n",
+    "# de geração de números em ordem decrescente. Por exemplo range(5, 0, -1) gera um iterator\n",
+    "# para a sequência 5, 4, 3, 2, 1\n",
     "### Este exercicio não tem assert\n",
     "## Faça aqui\n"
    ]
