--- a/exercicios/Aula2_Exercicio_Extra.ipynb
+++ b/exercicios/Aula2_Exercicio_Extra.ipynb
@@ -4,8 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Aula 2 - Exercícios Extras - Sintaxe de Python e NumPy Array\n",
-    "### Consulta a internet (Google, Stackoverflow e etc) liberada!!"
+    "# Aula 2 - Exercícios Extras - Sintaxe de Python e NumPy Array"
    ]
   },
   {
@@ -21,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.6 Escreva uma função Python para selecionar dentre os elementos de um array aquele que mais se aproxima de um determinado valor N passado como argumento da função.\n",
+    "### 2.11 Escreva uma função Python para selecionar dentre os elementos de um array aquele que mais se aproxima de um determinado valor N passado como argumento da função.\n",
     "#### Se houver dois elementos equidistantes de N e forem os mais próximos de N, retorne o menor. Ou seja, para [1, 3, 4] e N=2, retorne 1.\n",
     "#### Não use laços (loops), use funções Numpy.\n",
     "#### Exemplo:  para um array([0, 12, 45, 34, 99]) e N=20\n",
@@ -87,7 +86,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.7 Escreva uma função que receba uma lista de inteiros como parâmetro e retorne um dicionário com as chaves sendo os elementos da lista, e os valores sendo os elementos da mesma lista, mas na ordem inversa.\n",
+    "### 2.12 Escreva uma função que receba uma lista de inteiros como parâmetro e retorne um dicionário com as chaves sendo os elementos da lista, e os valores sendo os elementos da mesma lista, mas na ordem inversa.\n",
     "#### Exemplo: para a lista [1, 2, 3, 4, 5]\n",
     "#### Resultado esperado: {1: 5, 2: 4, 3: 3, 4: 2, 5: 1}"
    ]
