--- a/notebook/Aula1/Aula1_Warmup.ipynb
+++ b/notebook/Aula1/Aula1_Warmup.ipynb
@@ -103,61 +103,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### W1.3 Usando um loop do tipo while imprima os numeros inteiros multiplos de 3 de 1 a 100.\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Faça aqui\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### W1.4 Usando um loop do tipo while calcule o fatorial de 100."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "e\n"
+      "24\n"
      ]
     }
    ],
-   "source": [
-    "# Considere a lista a a seguir:\n",
-    "lista_str = [\"234sewerawe\", \"abasdreera\", \"rtydeaera\", \"agwdeaer\", \"nsedert\", \n",
-    "         \"ab23ea\", \"qycde\", \"ajyd\", \"akm\", \"wb\", \"r\"]\n",
-    "a = \"a12445\"\n",
-    "print(lista_str[0][-1])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### W1.3 Usando um laço do tipo while, percorra a lista_str acima deixando as strings em maiúsculo desde o primeiro até o 4o elemento desta lista (ou seja, elemento de índice 3).\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Faça aqui\n",
-    "n = 0\n",
-    "while n < len(lista_str):\n",
-    "    #     Lista N\n",
-    "    # \n",
-    "    n = n+1\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### W1.4 Usando um laço do tipo while, percorra a lista_str acima excluindo os elementos da lista que terminam com vogal\n",
-    "#### Dica: teste se um caracter é uma vogal assim: charac in [\"a\", \"b\", \"c\", \"d\", \"e\"]\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# Faça aqui\n"
    ]
@@ -468,7 +448,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### W1.25 Escreva uma função para calcular o máximo de dois numeros"
+    "#### W1.18 Escreva uma função para calcular o máximo de dois numeros"
    ]
   },
   {
@@ -490,7 +470,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### W1.26 Escreva uma função para calcular a velocidade de um objeto dado a distancia percorrida e o tempo. Considere as unidades de distância e tempo sendo respectivamente Km e hora."
+    "#### W1.19 Escreva uma função para calcular a velocidade de um objeto dado a distancia percorrida e o tempo. Considere as unidades de distância e tempo sendo respectivamente Km e hora."
    ]
   },
   {
@@ -511,7 +491,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### W1.27 Escreva uma função para determinar se um objeto extrapolou um determinado limite de velocidade. O limite de velocidade deve ser parametrizável (um argumento da função). A função deve retornar True se o limite for excedido, e retornar False caso contrário."
+    "#### W1.20 Escreva uma função para determinar se um objeto extrapolou um determinado limite de velocidade. O limite de velocidade deve ser parametrizável (um argumento da função). A função deve retornar True se o limite for excedido, e retornar False caso contrário."
    ]
   },
   {
@@ -536,7 +516,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### W1.28 Corrija os erros de sintaxe das células abaixo"
+    "#### W1.21 Corrija os erros de sintaxe das células abaixo"
    ]
   },
   {
@@ -591,7 +571,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### W1.29 Corrija os erros do tipo Runtime abaixo"
+    "#### W1.22 Corrija os erros do tipo Runtime abaixo"
    ]
   },
   {
@@ -638,7 +618,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### W1.30 Corrija os erros de lógica das células abaixo"
+    "#### W1.23 Corrija os erros de lógica das células abaixo"
    ]
   },
   {
