--- a/notebook/Aula2/Aula2_Warmup.ipynb
+++ b/notebook/Aula2/Aula2_Warmup.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### W2.4 Crie uma tupla com os números inteiros ímpares entre 0 e 10. Simplesmente crie a tupla sem nenhum laço(loop)."
+    "#### W2.4 Crie uma tupla com os números inteiros entre 0 e 10. Crie a tupla manualmente, sem nenhum laço(loop)."
    ]
   },
   {
@@ -98,6 +98,146 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Treinando conceitos de dicionário (dict) em python"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### W2.7 Criar um dicionário que represente o conteúdo da tabela abaixo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "| Nome       | Endereço     | Telefone     |\n",
+    "| :------------- | :----------: | -----------: |\n",
+    "|  Jose da Silva | Rua 2, n. 39   | 119865563    |"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Faça aqui\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### W2.8 Jose da Silva mudou seu número de telefone para 1187662330. Altere este valor no dicionário que você acabou de criar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Faça aqui\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### W2.9 Crie um atributo CPF no dicionário da célula acima e adicione o CPF do Jose da Silva: 495.152.344-90"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Faça aqui\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### W2.10 Remova o atributo Endereço desse dicionário"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Faça aqui\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### W2.11 Criar uma lista de dicionários que represente o conteúdo da tabela abaixo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "| Nome       | Endereço     | Telefone     | CPF |\n",
+    "| :------------- | :----------: | -----------: | -----------: |\n",
+    "|  Jose da Silva | Rua 2, n. 39   | 119865563    | 495.152.344-90\n",
+    "|  Roberto da Araujo | Av 2, n. 2010   | 389912353    | 755.223.432-10\n",
+    "|  Maria Almeida | Rua Jau, n. 309   | 139845162    | 131.223.415-12\n",
+    "|  Joaquim Pereira | Av Sete de Setembro, n. 5240   | 329912633    | 456.214.616-67"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Faça aqui\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### W2.12 Considerando a lista de dicionarios do exercicio anterior, remova o dicionário do Jose da Silva desta lista."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Faça aqui\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### W2.13 Considerando a lista de dicionarios do exercicio anterior, usando um loop, remova todos os telefones desta lista de dicionários\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Faça aqui\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Treinando a função zip"
    ]
   },
@@ -105,7 +245,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### W2.7 Crie um código que execute as instruções solicitadas abaixo"
+    "#### W2.14 Crie um código que execute as instruções solicitadas abaixo"
    ]
   },
   {
@@ -134,7 +274,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### W2.8 Escreva uma instrução if else na forma inline que teste o tamanho de uma string e retorne True caso o seu tamanho seja maior que 5, e Falso caso contrário.\n",
+    "#### W2.15 Escreva uma instrução if else na forma inline que teste o tamanho de uma string e retorne True caso o seu tamanho seja maior que 5, e Falso caso contrário.\n",
     "#### Dica - Sintaxe: valor_se_verdadeiro if condicao else valor_se_falso"
    ]
   },
@@ -152,7 +292,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### W2.9 Escreva um list comprehension, ou seja, uma instrução de loop (for) na forma inline que gere a lista [1, 4, 9, 16, 25, 36, 49, 64,  81, 100]\n",
+    "#### W2.16 Escreva um list comprehension, ou seja, uma instrução de loop (for) na forma inline que gere a lista [1, 4, 9, 16, 25, 36, 49, 64,  81, 100]\n",
     "#### Dica - Sintaxe: [ OPERACAO_COM_X for X in SEQUENCIA ]"
    ]
   },
@@ -169,7 +309,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### W2.10 Escreva um list comprehension, ou seja, uma instrução de loop (for) na forma inline que gere a lista [1, 3, 5, 7, 9, 11, 13, 15, 17, 19]\n",
+    "#### W2.17 Escreva um list comprehension, ou seja, uma instrução de loop (for) na forma inline que gere a lista [1, 3, 5, 7, 9, 11, 13, 15, 17, 19]\n",
     "#### Dica - Sintaxe: [ OPERACAO_COM_X for X in SEQUENCIA ]"
    ]
   },
@@ -186,7 +326,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### W2.11 Escreva um dict comprehension, ou seja, uma instrução de loop (for) na forma inline que gere um dicionário. O dicionário deve conter palavras nas suas chaves e nos valores, os respectivos tamanhos (quantidade de letras) das suas chaves.\n",
+    "#### W2.18 Escreva um dict comprehension, ou seja, uma instrução de loop (for) na forma inline que gere um dicionário. O dicionário deve conter palavras nas suas chaves e nos valores, os respectivos tamanhos (quantidade de letras) das suas chaves.\n",
     "#### Exemplo: {\"carro\": 5, \"moto\": 4, \"trem\": 4, \"aviao\": 5, \"bicicleta\": 9} "
    ]
   },
@@ -228,7 +368,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### W2.12 Execute as instruções da célula abaixo"
+    "#### W2.19 Execute as instruções da célula abaixo"
    ]
   },
   {
@@ -255,7 +395,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### W2.13 Realize a conversão de tipos especificada na célula abaixo"
+    "#### W2.20 Realize a conversão de tipos especificada na célula abaixo"
    ]
   },
   {
@@ -278,7 +418,7 @@
    "metadata": {},
    "source": [
     "### Treinando operações vetorizadas em ndarrays\n",
-    "#### W2.14 Sem utilizar laços (loops), execute as instruções da célula abaixo"
+    "#### W2.21 Sem utilizar laços (loops), execute as instruções da célula abaixo"
    ]
   },
   {
@@ -311,7 +451,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### W2.15 Sem utilizar laços (loops), execute as instruções da célula abaixo"
+    "#### W2.22 Sem utilizar laços (loops), execute as instruções da célula abaixo"
    ]
   },
   {
@@ -350,7 +490,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### W2.16 Usando a função np.sum, calcule a soma dos elementos de cada linha do array criado abaixo. "
+    "#### W2.23 Usando a função np.sum, calcule a soma dos elementos de cada linha do array criado abaixo. "
    ]
   },
   {
@@ -367,7 +507,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### W2.17 Usando a função np.mean, calcule a média dos elementos de cada coluna do array criado abaixo. "
+    "#### W2.24 Usando a função np.mean, calcule a média dos elementos de cada coluna do array criado abaixo. "
    ]
   },
   {
@@ -384,7 +524,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### W2.18 Usando a função np.any, mostre quais colunas do array criado abaixo possuem pelo menos um valor diferente de zero. "
+    "#### W2.25 Usando a função np.any, mostre quais colunas do array criado abaixo possuem pelo menos um valor diferente de zero. "
    ]
   },
   {
@@ -401,7 +541,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### W2.19 Usando a função np.argmax, retorne o índice das colunas que contém o valor máximo de cada linha array criado abaixo. "
+    "#### W2.26 Usando a função np.argmax, retorne o índice das colunas que contém o valor máximo de cada linha array criado abaixo. "
    ]
   },
   {
@@ -418,7 +558,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### W2.20 Crie um array unidimensional de 120 elementos, cujos valores sejam sequenciais iniciando em 20 e terminando em 139.\n",
+    "#### W2.27 Crie um array unidimensional de 120 elementos, cujos valores sejam sequenciais iniciando em 20 e terminando em 139.\n",
     "#### Dica: use a função np.arange(). Ela tem a mesma sintaxe (argumentos) da função range do python estudada em aula."
    ]
   },
@@ -435,7 +575,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### W2.21 Faltere a estrutura do array do exercício anterior. Transformando-o num array bidimensional de 12 linhas e 10 colunas.\n",
+    "#### W2.28 Faltere a estrutura do array do exercício anterior. Transformando-o num array bidimensional de 12 linhas e 10 colunas.\n",
     "#### Dica: Use o método (função) ndarray.reshape(), passando as dimensões (linhas e colunas) como argumento."
    ]
   },
@@ -452,7 +592,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### W2.22 Selecione os numeros pares do array definido abaixo\n",
+    "#### W2.29 Selecione os numeros pares do array definido abaixo\n",
     "#### Dica: pra testar se um número é par, use a seguinte expressão: n % 2 == 0. Neste caso, se n for par o resultado a expressão é True, pois o operador porcentagem (%) retorna o resto da divisão."
    ]
   },
