--- a/notebook/Aula1/Aula1_Warmup_Solucoes.ipynb
+++ b/notebook/Aula1/Aula1_Warmup_Solucoes.ipynb
@@ -886,7 +886,7 @@
    "source": [
     "l = [{\"nome\": \"Joao\", \"telefone\": 9917363}, {\"nome\": \"Ana\", \"telefone\": 9023633},\n",
     "    {\"nome\": \"Roberto\", \"telefone\": 9937321}, {\"nome\": \"Maria\", \"telefone\": 92736213}] \n",
-    "# O erre é a grafia incorreta de Telefome e none. Basta corrigir para telefone e nome.\n",
+    "# O erro é a grafia incorreta de Telefome e none. Basta corrigir para telefone e nome.\n",
     "# imprimir o valor do telefone e do nome do ultimo elmento da lista de dicionários\n",
     "print(l[-1]['telefone'], l[-1]['nome'])"
    ]
